Fix spacing on home page and nav bar

--- a/src/styles/desktop/Header.scss
+++ b/src/styles/desktop/Header.scss
@@ -37,11 +37,10 @@ a, a:hover, a:focus, a:active {
 .nav-button:hover {
   background-color: #29f3c3;
   color: $black;
-  width: 120px;
 }
 
 .home-button {
-  height: 100px;
+  height: 5rem;
   border: none;
   outline: none;
   align-self: center;
@@ -51,7 +50,7 @@ a, a:hover, a:focus, a:active {
 
 .nav-bar {
   width: 100%; 
-  height: 100px;
+  height: 5rem;
   padding: 5px 0 5px 0;
   background-color: $black;
   display: flex;
@@ -66,7 +65,7 @@ a, a:hover, a:focus, a:active {
 
 .nav-bar-active {
   width: 100%; 
-  height: 100px;
+  height: 5rem;
   padding: 5px 0 5px 0;
   background-color: rgba($color: #000000, $alpha: .8);
   display: flex;
