--- a/src/styles/desktop/Home.scss
+++ b/src/styles/desktop/Home.scss
@@ -12,7 +12,7 @@ a, a:hover, a:focus, a:active {
 }
 
 .bio-intro-second {
-  font-size: 18px;
+  font-size: 2rem;
   font-weight: bold;
 }
 
@@ -64,7 +64,7 @@ a, a:hover, a:focus, a:active {
   width: 90%;
   justify-content: center;
   border-bottom: 1px $black solid;
-  padding: 50px 0 50px 0;
+  padding: 4rem 0 4rem 0;
   display: flex;
   @include flex-middle(column);
   // background-color: $magnolia;
@@ -98,7 +98,6 @@ a, a:hover, a:focus, a:active {
   width: 60%;
   // justify-content: flex-start;
   font-size: 18px;
-  padding: 100px 0 100px 0;
   @include flex-center(column);
 }
 
